# candidate-transformer

./: DESIGN.md  README.md  main.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  server.py
app/: globals.css  layout.tsx  page.tsx
components/: CandidateCard.tsx  ConfigEditor.tsx  EmptyState.tsx  JsonViewer.tsx  LoadingOverlay.tsx  LogsPanel.tsx  Navbar.tsx  PipelineStepper.tsx  ProvenanceTable.tsx  Sidebar.tsx  StatusCard.tsx  UploadCard.tsx
config/: custom.json  default.json
hooks/: usePipeline.tsx
output/: .gitkeep  custom_result.json  default_result.json  result.json
sample_data/: candidate.csv
scripts/: generate_design_pdf.py  generate_sample_pdf.py  test_projection.py  test_validator.py
services/: api.ts
src/: __init__.py  cli.py  main.py
src/merge/: __init__.py  resolver.py  rules.py
src/models/: __init__.py  candidate.py  config.py  provenance.py
src/normalizers/: __init__.py  date.py  email.py  location.py  phone.py  skill.py
src/parsers/: __init__.py  csv_parser.py  pdf_parser.py
src/pipeline/: __init__.py  confidence.py  detect.py  merger.py  normalizer.py  parser.py  pipeline.py  projection.py  validator.py
src/utils/: __init__.py  constants.py  exceptions.py  logging.py
tests/: __init__.py  test_config_validation.py  test_date_normalizer.py  test_email_normalizer.py  test_error_handling.py  test_integration.py  test_merge.py  test_phone_normalizer.py  test_projection.py  test_skill_normalizer.py
types/: index.ts
