[project]
name = "candidate-transformer"
version = "1.0.0"
description = "Multi-source candidate data transformer with deterministic merge, provenance tracking, and configurable output projection."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7,<3",
    "typer>=0.12,<1",
    "polars>=1.0,<2",
    "pdfplumber>=0.11,<1",
    "rapidfuzz>=3.9,<4",
    "phonenumbers>=8.13,<9",
    "email-validator>=2.1,<3",
    "python-dateutil>=2.9,<3",
    "pycountry>=24.6,<25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-cov>=5.0,<6",
    "black>=24.4,<25",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
]

[project.scripts]
candidate-transformer = "src.main:app"

[tool.black]
line-length = 99
target-version = ["py312"]

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = ["E501", "RUF001", "RUF002", "RUF003", "SIM102", "SIM114"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "pdfplumber.*",
    "phonenumbers.*",
    "pycountry.*",
    "rapidfuzz.*",
    "dateutil.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.backends._legacy:_Backend"
